...
           android:layout_height="wrap_content"
           android:gravity="start"
           android:text="@{reminderDataItem.title}"
           android:textSize="@dimen/text_size_large"
           android:textColor="@color/colorPrimaryDark"
           android:textAppearance="@style/TextAppearance.AppCompat.Title"
           tools:text="Title"/>

       <TextView
           android:layout_marginStart="32dp"
           android:layout_marginTop="4dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
...
